--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -4,6 +4,10 @@
   "description": "OpenClaw home screen, local setup wizard, and status panel for VS Code",
   "version": "0.1.0",
   "publisher": "openclaw",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/damoahdominic/occ.git"
+  },
   "engines": {
     "vscode": "^1.85.0"
   },
