--- a/apps/wrapper/package.json
+++ b/apps/wrapper/package.json
@@ -42,7 +42,7 @@
     },
     "mac": {
       "target": ["dmg"],
-      "icon": "assets/icon.icns",
+      "icon": "assets/icon.png",
       "category": "public.app-category.developer-tools"
     },
     "linux": {
