feat: implement home screen with OpenClaw detection, install, and config flow

--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -1,8 +1,8 @@
 {
   "name": "openclaw-vscode",
   "displayName": "OpenClaw",
-  "description": "OpenClaw home screen, local setup wizard, and status panel for VS Code",
-  "version": "0.1.0",
+  "description": "OpenClaw home screen, install wizard, configuration, and status panel for VS Code",
+  "version": "0.2.0",
   "publisher": "openclaw",
   "repository": {
     "type": "git",
@@ -23,8 +23,12 @@
         "title": "OpenClaw: Home"
       },
       {
-        "command": "openclaw.setupLocal",
-        "title": "OpenClaw: Setup Local"
+        "command": "openclaw.configure",
+        "title": "OpenClaw: Configure"
+      },
+      {
+        "command": "openclaw.install",
+        "title": "OpenClaw: Install"
       },
       {
         "command": "openclaw.status",
