--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,29 +7,6 @@ on:
     branches: [main]
 
 jobs:
-  build-wrapper:
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-      - name: Install dependencies
-        run: npm ci
-        working-directory: apps/wrapper
-      - name: Build Electron app
-        run: npm run build
-        working-directory: apps/wrapper
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - uses: actions/upload-artifact@v4
-        with:
-          name: occode-${{ matrix.os }}
-          path: apps/wrapper/dist/*
-
   build-extension:
     runs-on: ubuntu-latest
     steps:
@@ -50,3 +27,34 @@ jobs:
         with:
           name: openclaw-extension
           path: apps/extension/*.vsix
+
+  build-wrapper:
+    needs: build-extension
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+      - name: Download extension VSIX
+        uses: actions/download-artifact@v4
+        with:
+          name: openclaw-extension
+          path: apps/wrapper/extensions
+      - name: Verify VSIX bundled
+        run: ls -la apps/wrapper/extensions/*.vsix
+      - name: Install dependencies
+        run: npm ci
+        working-directory: apps/wrapper
+      - name: Build Electron app
+        run: npm run build
+        working-directory: apps/wrapper
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/upload-artifact@v4
+        with:
+          name: occode-${{ matrix.os }}
+          path: apps/wrapper/dist/*
