--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,6 +45,7 @@ jobs:
           name: openclaw-extension
           path: apps/wrapper/extensions
       - name: Verify VSIX bundled
+        shell: bash
         run: ls -la apps/wrapper/extensions/*.vsix
       - name: Install dependencies
         run: npm ci
