--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,6 +53,7 @@ jobs:
           name: extension-vsix
           path: apps/wrapper/extensions
       - name: Verify VSIX bundled
+        shell: bash
         run: ls -la apps/wrapper/extensions/*.vsix
       - name: Install dependencies
         run: npm ci
