--- a/apps/extension/.vscodeignore
+++ b/apps/extension/.vscodeignore
@@ -1,7 +1,8 @@
-.vscode/**
-src/**
 node_modules/**
-tsconfig.json
+src/**
 **/*.ts
 **/*.map
-.gitignore
+.vscode/**
+.git/**
+.github/**
+tsconfig.json
