Add VSIX bundler, checksum manifest, and cross-platform config/status fixes

--- a/apps/extension/.vscodeignore
+++ b/apps/extension/.vscodeignore
@@ -1,8 +1,10 @@
-node_modules/**
-src/**
-**/*.ts
-**/*.map
-.vscode/**
-.git/**
-.github/**
-tsconfig.json
+../**
+**/*
+!out
+!out/**
+!media
+!media/**
+!package.json
+!README.md
+!LICENSE
+!.vscodeignore
