--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -11,7 +11,9 @@
   "engines": {
     "vscode": "^1.85.0"
   },
-  "categories": ["Other"],
+  "categories": [
+    "Other"
+  ],
   "activationEvents": [
     "onStartupFinished"
   ],
