--- a/apps/wrapper/package.json
+++ b/apps/wrapper/package.json
@@ -54,6 +54,9 @@
   "dependencies": {
     "electron-log": "^5.0.0"
   },
+  "optionalDependencies": {
+    "@electron/rcedit": "^4.0.0"
+  },
   "devDependencies": {
     "electron": "^30.0.0",
     "electron-builder": "^24.0.0"
