--- a/apps/wrapper/package.json
+++ b/apps/wrapper/package.json
@@ -22,6 +22,7 @@
   "build": {
     "appId": "com.openclaw.occode",
     "productName": "OCcode",
+    "icon": "assets/icon.png",
     "directories": {
       "output": "dist"
     },
@@ -34,6 +35,11 @@
         "from": "extensions/",
         "to": "extensions/",
         "filter": ["**/*.vsix"]
+      },
+      {
+        "from": "assets/",
+        "to": "assets",
+        "filter": ["**/*"]
       }
     ],
     "win": {
