--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "cobe": "^0.6.5",
+    "motion": "^12.34.1",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
