fix: include control-center data in VSIX

--- a/packages/control-center/package.json
+++ b/packages/control-center/package.json
@@ -2,7 +2,7 @@
   "name": "@occode/control-center",
   "version": "0.0.1",
   "private": true,
-  "main": "src/ui.ts",
+  "main": "dist/data.js",
   "types": "ui.d.ts",
   "exports": {
     ".": {
@@ -15,9 +15,16 @@
     },
     "./data": {
       "types": "./data.d.ts",
+      "require": "./dist/data.js",
       "default": "./src/data.ts"
     }
   },
+  "files": [
+    "dist",
+    "src",
+    "*.d.ts",
+    "package.json"
+  ],
   "peerDependencies": {
     "react": "19.2.3",
     "react-dom": "19.2.3"
