--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -54,22 +54,16 @@
     ]
   },
   "scripts": {
-    "build:webview": "esbuild src/webview/control-center.tsx --bundle --format=esm --outfile=media/control-center.js --loader:.ts=ts --loader:.tsx=tsx --define:process.env.NODE_ENV=\\\"production\\\" --tsconfig=tsconfig.json --external:fs --external:path --external:os",
-    "compile": "npm run build:webview && tsc -p ./",
+    "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
     "package": "vsce package"
   },
-  "dependencies": {
-    "@occode/control-center": "file:../../packages/control-center",
-    "react": "19.2.3",
-    "react-dom": "19.2.3"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/vscode": "^1.85.0",
     "@types/node": "^20.0.0",
     "typescript": "^5.3.0",
-    "@vscode/vsce": "^2.22.0",
-    "esbuild": "^0.21.5"
+    "@vscode/vsce": "^2.22.0"
   },
   "icon": "media/icon.png"
 }
