--- a/apps/extension/tsconfig.json
+++ b/apps/extension/tsconfig.json
@@ -18,5 +18,5 @@
       "@occode/control-center/data": ["../packages/control-center/src/data.ts"]
     }
   },
-  "exclude": ["node_modules", "out"]
+  "exclude": ["node_modules", "out", "src/webview", "src/panels/control-center-webview.ts"]
 }
