Update package dependencies and integrate GSAP for enhanced animations
- Added GSAP and lucide-react to package dependencies for improved animation capabilities.
- Updated NotificationFeed component to utilize GSAP for 3-D card stack animations, enhancing visual effects and user experience.
- Adjusted card visibility and layout settings to accommodate new animation features.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "@studio-freight/react-lenis": "^0.0.47",
     "cobe": "^0.6.5",
-    "framer-motion": "^12.34.2"
+    "framer-motion": "^12.34.2",
+    "gsap": "^3.14.2",
+    "lucide-react": "^0.574.0"
   }
 }
