--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "cobe": "^0.6.5",
+    "gsap": "^3.14.2",
     "lenis": "^1.3.17",
     "motion": "^12.34.1",
     "next": "16.1.6",
