--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,7 +55,14 @@ jobs:
         working-directory: apps/wrapper
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Show dist output
+        shell: bash
+        run: |
+          echo "=== dist tree ==="
+          ls -la apps/wrapper/dist || true
+          find apps/wrapper/dist -maxdepth 3 -type f
       - uses: actions/upload-artifact@v4
         with:
           name: occode-${{ matrix.os }}
-          path: apps/wrapper/dist/*
+          path: apps/wrapper/dist/**
+          if-no-files-found: error
