Fix release asset collection

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -87,6 +87,23 @@ jobs:
 
       - name: List artifacts
         run: find artifacts -type f | head -30
+      - name: Collect release assets
+        shell: bash
+        run: |
+          set -euo pipefail
+          mkdir -p release
+          # DMG (arm64, x64, universal)
+          while IFS= read -r -d '' f; do cp -n "$f" release/; done < <(find artifacts -type f -name "OCcode-*.dmg" -print0)
+          # AppImage
+          while IFS= read -r -d '' f; do cp -n "$f" release/; done < <(find artifacts -type f -name "OCcode-*.AppImage" -print0)
+          # Debian package
+          while IFS= read -r -d '' f; do cp -n "$f" release/; done < <(find artifacts -type f -name "occode-wrapper_*_amd64.deb" -print0)
+          # Windows installers/portable (exclude unpacked app)
+          while IFS= read -r -d '' f; do cp -n "$f" release/; done < <(find artifacts -type f -name "OCcode*.exe" ! -path "*unpacked*" -print0)
+          # VSIX
+          while IFS= read -r -d '' f; do cp -n "$f" release/; done < <(find artifacts -type f -name "openclaw-vscode-*.vsix" -print0)
+          echo "=== release assets ==="
+          ls -la release
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
@@ -95,11 +112,6 @@ jobs:
           generate_release_notes: true
           draft: false
           files: |
-            artifacts/**/OCcode-*.dmg
-            artifacts/**/OCcode-*.AppImage
-            artifacts/**/occode-wrapper_*_amd64.deb
-            artifacts/**/OCcode.*.exe
-            artifacts/**/OCcode.Setup.*.exe
-            artifacts/**/openclaw-vscode-*.vsix
+            release/*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
