Include vscodium manifest in build

--- a/apps/wrapper/package.json
+++ b/apps/wrapper/package.json
@@ -28,7 +28,8 @@
     },
     "files": [
       "src/**/*",
-      "assets/**/*"
+      "assets/**/*",
+      "vscodium-manifest.json"
     ],
     "extraResources": [
       {
