--- a/apps/wrapper/package.json
+++ b/apps/wrapper/package.json
@@ -17,7 +17,8 @@
     "build": "electron-builder",
     "build:win": "electron-builder --win",
     "build:mac": "electron-builder --mac",
-    "build:linux": "electron-builder --linux"
+    "build:linux": "electron-builder --linux",
+    "download:vscodium": "node scripts/download-vscodium.js"
   },
   "build": {
     "appId": "com.openclaw.occode",
@@ -40,6 +41,11 @@
       {
         "from": "assets/",
         "to": "assets",
+        "filter": ["**/*"]
+      },
+      {
+        "from": "assets/vscodium/",
+        "to": "assets/vscodium",
         "filter": ["**/*"]
       }
     ],
