Fix: exclude vscodium from files to avoid electron-builder conflict

--- a/apps/wrapper/package.json
+++ b/apps/wrapper/package.json
@@ -30,6 +30,7 @@
     "files": [
       "src/**/*",
       "assets/**/*",
+      "!assets/vscodium/**/*",
       "vscodium-manifest.json"
     ],
     "extraResources": [
