--- a/apps/wrapper/package.json
+++ b/apps/wrapper/package.json
@@ -50,7 +50,7 @@
       "icon": "assets/icon.ico"
     },
     "mac": {
-      "target": ["dmg"],
+      "target": [{"target": "dmg", "arch": ["arm64", "x64"]}],
       "icon": "assets/icon.png",
       "category": "public.app-category.developer-tools"
     },
