Add arch to all CI matrix entries for consistent builds

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,6 +37,7 @@ jobs:
         include:
           - os: ubuntu-latest
             platform: linux
+            arch: x64
           - os: macos-latest
             platform: mac
             arch: arm64
@@ -45,6 +46,7 @@ jobs:
             arch: x64
           - os: windows-latest
             platform: win
+            arch: x64
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
