--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -115,7 +115,12 @@ jobs:
         run: npm ci
         working-directory: apps/wrapper
       - name: Build Electron app
-        run: npm run build:${{ matrix.platform }} -- --${{ matrix.arch }}
+        run: |
+          if [ "${{ matrix.platform }}" = "mac" ]; then
+            npm run build:mac:${{ matrix.arch }}
+          else
+            npm run build:${{ matrix.platform }}
+          fi
         working-directory: apps/wrapper
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
