Enhance OpenClaw extension setup with new UI components and configuration handling
- Added a new setup panel JavaScript file for improved user interaction.
- Updated package.json to include a flag for packaging without dependencies.
- Modified .vscodeignore to exclude Git files.
- Refactored setup.ts to utilize dummy data for configuration and streamline the UI initialization process.

--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -55,7 +55,7 @@
   "scripts": {
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
-    "package": "vsce package"
+    "package": "vsce package --no-dependencies"
   },
   "dependencies": {},
   "devDependencies": {
