--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,6 +47,10 @@ jobs:
       - name: Verify VSIX bundled
         shell: bash
         run: ls -la apps/wrapper/extensions/*.vsix
+      - name: Download VSCodium for current platform
+        shell: bash
+        run: node scripts/download-vscodium.js
+        working-directory: apps/wrapper
       - name: Install dependencies
         run: npm ci
         working-directory: apps/wrapper
